# problem-solving

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LIBRARY_FEATURES.md  Makefile  README.md  ROADMAP.md  algorithms.md  pyproject.toml  symbolic_reasoning.md
examples/: README.md
examples/python/: constraint_based_scheduling.py  llm_verified_reasoning.py  mcp_usage.py  real_world_logistics_planning.py
knowledge/: schema.json
knowledge/algorithms/: astar.json  bfs.json  cas.json  csp_backtracking.json  dfs.json  dpll_sat.json  genetic_algorithm.json  gradient_descent.json  greedy.json  simulated_annealing.json  smt_lite.json  ucs.json
spec/: API_REFERENCE.md  FUNCTIONAL_SPEC.md  PROTOCOL_SPEC.md  protocol.json
spec/schemas/: mcp_tools.schema.json  solver_request.schema.json  solver_response.schema.json
spec/schemas/engines/: logic.schema.json  optimization.schema.json  sat_csp.schema.json  search.schema.json  symbolic.schema.json
src/problemsolving/: __init__.py  selector.py
src/problemsolving/csp/: backtracking.py  sat.py
src/problemsolving/logic/: prolog_lite.py  rule_engine.py
src/problemsolving/mcp/: handlers.py  server.py
src/problemsolving/optimization/: genetic.py  gradient_descent.py  simulated_annealing.py
src/problemsolving/protocol/: registry.py  request.py  response.py
src/problemsolving/search/: astar.py  bfs.py  dfs.py  greedy.py  ucs.py
src/problemsolving/symbolic/: cas.py  smt_lite.py
tests/: test_bfs.py  test_import.py  test_logic.py  test_mcp.py  test_optimization.py  test_protocol.py  test_sat_csp.py  test_search.py  test_selector.py  test_symbolic.py
