[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "problemsolving"
version = "0.1.0"
description = "Universal AI reasoning toolkit — classical algorithms + symbolic engines as Chain-of-Thought replacement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Swaroop", email = "ksjpswaroop@gmail.com"},
]
keywords = ["ai", "algorithms", "symbolic-reasoning", "sat", "smt", "mcp", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
sat = ["python-sat>=1.8"]
smt = ["z3-solver>=4.12"]
cas = ["sympy>=1.12"]
prolog = ["pyswip>=0.2.10"]
kg = ["rdflib>=7.0", "owlready2>=0.46"]
all = [
    "python-sat>=1.8",
    "z3-solver>=4.12",
    "sympy>=1.12",
    "pyswip>=0.2.10",
    "rdflib>=7.0",
    "owlready2>=0.46",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
problemsolving = "problemsolving.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
